--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <p>
               Moleskine big data workflow parallax intuitive driven driven.
               Pitch deck earned media bootstrapping ideate co-working
-              convergence engaging human-centered design 360 campaign.
+              convergence engaging human-centered design 360 campaign Pitch deck
+              earned media bootstrapping ideate co-working convergence engaging
+              human-centered design 360 campaign.
             </p>
             <p>
               Moleskine big data workflow parallax intuitive driven driven.
